Bug 426514 - Snap strategy suggestions are drawn with a huge offset
Summary: Snap strategy suggestions are drawn with a huge offset
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 4.3.0
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-14 08:43 UTC by Dmitry Kazakov
Modified: 2020-09-28 06:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the problem (13.53 KB, image/png)
2020-09-14 08:43 UTC, Dmitry Kazakov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2020-09-14 08:43:48 UTC
Created attachment 131626 [details]
Screenshot of the problem

See an attached screenshot for example

STEPS TO REPRODUCE
0. Create a vector layer
1. Select Path Creation Tool
2. Create a vector path
3. Press Shift+S and activate "Orthogonal" or "Node" snapping mode
4. Try to create new vector path 
5. Hover over existing path points, see how suggestions are drawn at a huge offset
Comment 1 Dmitry Kazakov 2020-09-16 13:14:07 UTC
Git commit 695025dfdb839f4941eb3517453ded5cb4d54a7d by Dmitry Kazakov.
Committed on 16/09/2020 at 13:13.
Pushed by dkazakov into branch 'master'.

Fix snapping decorations in Create Path Tool

It was a regression fron November 2019

M  +1    -1    libs/basicflakes/tools/KoCreatePathTool.cpp

https://invent.kde.org/graphics/krita/commit/695025dfdb839f4941eb3517453ded5cb4d54a7d
Comment 2 Dmitry Kazakov 2020-09-22 09:15:08 UTC
Git commit 32d13608f499c71005a3807cf042bff6e49e0bf8 by Dmitry Kazakov.
Committed on 22/09/2020 at 09:14.
Pushed by dkazakov into branch 'krita/4.3'.

Fix snapping decorations in Create Path Tool

It was a regression fron November 2019

M  +1    -1    libs/basicflakes/tools/KoCreatePathTool.cpp

https://invent.kde.org/graphics/krita/commit/32d13608f499c71005a3807cf042bff6e49e0bf8
Comment 3 Dmitry Kazakov 2020-09-28 06:50:53 UTC
Git commit 68ce833e98e31fa84b37e2bec24d884bffb91d0d by Dmitry Kazakov.
Committed on 28/09/2020 at 06:43.
Pushed by dkazakov into branch 'krita/4.4.0'.

Fix snapping decorations in Create Path Tool

It was a regression fron November 2019

M  +1    -1    libs/basicflakes/tools/KoCreatePathTool.cpp

https://invent.kde.org/graphics/krita/commit/68ce833e98e31fa84b37e2bec24d884bffb91d0d