Fix snapping decorations in Create Path Tool

It was a regression fron November 2019

BUG:426514